--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 	"author": "Rishi Goyal",
 	"license": "ISC",
 	"dependencies": {
-		"express": "^4.17.3"
+		"express": "^4.17.3",
+		"express-session": "^1.17.2"
 	}
 }
